[package]
name = "cobra_commander"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive", "rc"] }
log = "^0.4"
simplelog = "^0.12"
derive_more = "^0.99"
lazy_static = "^1"
rosc = "^0.9"
rust_dmx = "0.5"
serde_yaml = "0.9"
crossbeam-channel = "0.5.6"
local-ip-address = "0.3.0"
number = { git = "https://github.com/generalelectrix/number", branch = "main" }
strum = "0.24"
strum_macros = "0.24"
regex = "1.6"
tunnels = { git = "https://github.com/generalelectrix/tunnels", branch = "main" }
tunnels_lib = { git = "https://github.com/generalelectrix/tunnels", branch = "main" }
zmq = "0.10.0"
anyhow = { version = "1.0.70", features = ["backtrace"] }
thiserror = "1.0.40"
num-derive = "0.3.3"
num-traits = "0.2.15"
itertools = "0.13.0"
